--- a/GymReservation/GymReservation.csproj
+++ b/GymReservation/GymReservation.csproj
@@ -242,6 +242,8 @@
     <Content Include="Views\GymClasses\Details.cshtml" />
     <Content Include="Views\GymClasses\Edit.cshtml" />
     <Content Include="Views\GymClasses\Index.cshtml" />
+    <Content Include="Views\GymClasses\History.cshtml" />
+    <Content Include="Views\GymClasses\Reservation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
